--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                 <h2>FILTROS</h2>
                 <li>
                     <p for="slider-precio">AJUSTAR PRECIO:</p>
-                    <input type="range" id="slider-precio" min="1" max="100" step="1" value="50">
-                    <span id="valor-precio">50 €</span>
+                    <input type="range" id="slider-precio" min="1" max="200" step="1" value="100">
+                    <span id="valor-precio">100 €</span>
                 </li>
 
                 <li>
                     <p for="slider-edad">AJUSTAR EDAD:</p>
-                    <input type="range" id="slider-edad" min="1" max="18" step="1" value="7">
-                    <span id="valor-edad">7 +</span>
+                    <input type="range" id="slider-edad" min="1" max="18" step="1" value="10">
+                    <span id="valor-edad">10 +</span>
                 </li>
 
                 <li>
@@ -51,8 +51,24 @@
                       </label>
                       <label>
                         <input type="checkbox" value="Playmobil"> Playmobil
-                      </label><label>
+                      </label>
+                      <label>
                         <input type="checkbox" value="Hot Wheels"> Hot Wheels
+                      </label>
+                      <label>
+                        <input type="checkbox" value="nintendo"> Nintendo
+                      </label>
+                      <label>
+                        <input type="checkbox" value="Bandai"> Bandai
+                      </label>
+                      <label>
+                        <input type="checkbox" value="Juguettos"> Juguettos
+                      </label>
+                      <label>
+                        <input type="checkbox" value="Brio"> Brio
+                      </label>
+                      <label>
+                        <input type="checkbox" value="Spalding"> Spalding
                       </label>
                     </div>
                 </li>
@@ -75,3 +91,5 @@
     </footer>
 </body>
 </html>
+
+
