--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
                 <li><a href="index.html"> <img src="IMG/logo.png" alt="Inicio" id="logo"></a></li>
                 <li id="btn-filters"></li>
                 <li class="no-decoration"><p href="#">EN OFERTA</p></li>
-            <input type="text" id="search" placeholder="Buscar   🔎">
+            <div class="search">
+              <input type="text" id="searchInput" placeholder="Buscar..." >
+              <button onclick="executeSearch()">Buscar 🔎</button>
+            </div>
             </ul>  
         </nav>  
     </header>
