--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul id="barra-nav-list"> 
                 <li><a href="index.html"> <img src="IMG/logo.png" alt="Inicio" id="logo"></a></li>
                 <li id="btn-filters"></li>
-                <li class="no-decoration"><p href="#">EN OFERTA</p></li>
+                <li id="btn-offers"></li>
             <div class="search">
               <input type="text" id="searchInput" placeholder="Buscar..." >
               <button onclick="executeSearch()">Buscar 🔎</button>
