--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
             </ul>  
         </nav>  
     </header>
-    
+
+        <section id="navbar-mobile" class="hidden">
+          <ul id="sidebar-list">
+            <li>
+                <p for="slider-precio">AJUSTAR PRECIO:</p>
+                <input type="range" id="slider-precio" min="1" max="200" step="1" value="100">
+                <span id="valor-precio">100 €</span>
+            </li>
+
+            <li>
+                <p for="slider-edad">AJUSTAR EDAD:</p>
+                <input type="range" id="slider-edad" min="1" max="18" step="1" value="10">
+                <span id="valor-edad">10 +</span>
+            </li>
+          </ul>
+        </section> 
+
     <main>
         <section class="sidebar">
             
@@ -94,5 +110,7 @@
     </footer>
 </body>
 </html>
+
+
 
 
