--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           <ul id="sidebar-list">
             <li>
                 <p for="slider-precio">AJUSTAR PRECIO:</p>
-                <input type="range" id="slider-precio" min="1" max="200" step="1" value="100">
-                <span id="valor-precio">100 €</span>
+                <input type="range" id="slider-precio-mobile" min="1" max="200" step="1" value="100">
+                <span id="valor-precio-mobile">100 €</span>
             </li>
 
             <li>
                 <p for="slider-edad">AJUSTAR EDAD:</p>
-                <input type="range" id="slider-edad" min="1" max="18" step="1" value="10">
-                <span id="valor-edad">10 +</span>
+                <input type="range" id="slider-edad-mobile" min="1" max="18" step="1" value="10">
+                <span id="valor-edad-mobile">10 +</span>
             </li>
           </ul>
         </section> 
@@ -45,15 +45,15 @@
             <ul id="sidebar-list">
                 <h2>FILTROS</h2>
                 <li>
-                    <p for="slider-precio">AJUSTAR PRECIO:</p>
-                    <input type="range" id="slider-precio" min="1" max="200" step="1" value="100">
-                    <span id="valor-precio">100 €</span>
+                  <p for="slider-precio">AJUSTAR PRECIO:</p>
+                  <input type="range" id="slider-precio" min="1" max="200" step="1" value="100">
+                  <span id="valor-precio">100 €</span>
                 </li>
 
                 <li>
-                    <p for="slider-edad">AJUSTAR EDAD:</p>
-                    <input type="range" id="slider-edad" min="1" max="18" step="1" value="10">
-                    <span id="valor-edad">10 +</span>
+                  <p for="slider-edad">AJUSTAR EDAD:</p>
+                  <input type="range" id="slider-edad" min="1" max="18" step="1" value="10">
+                  <span id="valor-edad">10 +</span>
                 </li>
 
                 <li>
